# modem_console_test

./: CMakeLists.txt  README.md  cert.pem  partitions.csv  sdkconfig  sdkconfig.old
components/espressif__esp_modem_usb_dte/include/: esp_modem_usb_config.h
main/: CMakeLists.txt  cert.pem  httpget_handle.c  httppost_handle.c  httpput_handle.c  idf_component.yml  modem_console_main.cpp
